[gd_scene load_steps=18 format=2]

[ext_resource path="res://game/level_maps/exterior_ship/exterior_ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/levels/level_base.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_wall_walk.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/environments/spacestation_interior_env.tres" type="Environment" id=4]
[ext_resource path="res://game/levels/story_2_exterior/good_modules.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/objects/computer_ai/computer_ai.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/objects/zone_switch_area.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/levels/story_2_exterior/level_story_manager.gd" type="Script" id=8]
[ext_resource path="res://game/audio/voice/ai-story2-start.ogg" type="AudioStream" id=9]
[ext_resource path="res://game/audio/voice/ai-story2-encourage-walk.ogg" type="AudioStream" id=10]
[ext_resource path="res://game/audio/voice/ai-story2-completed-job.ogg" type="AudioStream" id=11]
[ext_resource path="res://game/audio/voice/ai-story2-puzzle-explainer.ogg" type="AudioStream" id=12]
[ext_resource path="res://game/audio/voice/ai-story2-puzzle-progress.ogg" type="AudioStream" id=13]
[ext_resource path="res://game/objects/computer_ai/computer_ai_line_trigger.tscn" type="PackedScene" id=14]
[ext_resource path="res://addons/freepd.com/Space Ambience.mp3" type="AudioStream" id=15]

[sub_resource type="SphereShape" id=2]
radius = 2.07904

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.70405, 1.68634, 1.76804 )

[node name="Story2Exterior" instance=ExtResource( 2 )]
environment = ExtResource( 4 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="." index="0"]
stream = ExtResource( 15 )
autoplay = true

[node name="ARVROrigin" parent="." index="1"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4, 69, 0 )

[node name="ARVRCamera" parent="ARVROrigin" index="0"]
far = 500.0

[node name="MovementWallWalk" parent="ARVROrigin" index="5" instance=ExtResource( 3 )]
stick_distance = 2.0

[node name="ExteriorShip" parent="." index="2" instance=ExtResource( 1 )]
modules_damaged = true

[node name="GoodModules" parent="." index="3" instance=ExtResource( 5 )]

[node name="ComputerAIStart" parent="." index="4" instance=ExtResource( 6 )]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 6.98111, 69.0122, -1.97876 )
audio_streams = [ ExtResource( 9 ) ]
play_first_audio_at_start = true

[node name="ComputerAIMidway" parent="." index="5" instance=ExtResource( 6 )]
transform = Transform( -0.671382, 0.52721, -0.520861, -0.635923, -0.0488982, 0.770202, 0.380589, 0.848327, 0.368094, 6.947, -30.5, 8.06 )
audio_streams = [ ExtResource( 10 ) ]

[node name="AiSpeechTrigger" parent="ComputerAIMidway" index="3" instance=ExtResource( 14 )]
transform = Transform( -0.671382, -0.635923, 0.380589, 0.52721, -0.0488982, 0.848327, -0.520861, 0.770202, 0.368094, -11.1814, -1.30077, 17.0338 )
computer_ai_path = NodePath("..")

[node name="CollisionShape" type="CollisionShape" parent="ComputerAIMidway/AiSpeechTrigger" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.157182, 0 )
shape = SubResource( 2 )

[node name="ComputerAIRepairStation" parent="." index="6" instance=ExtResource( 6 )]
transform = Transform( -1.81059e-08, 1, 6.18172e-08, 0.707107, -3.09086e-08, 0.707107, 0.707107, 5.65142e-08, -0.707107, 8.65978, -70.4411, 2.65755 )
audio_streams = [ ExtResource( 12 ), ExtResource( 11 ) ]

[node name="VictoryAudio" type="AudioStreamPlayer3D" parent="ComputerAIRepairStation" index="3"]

[node name="ComputerAIRepairSpares" parent="." index="7" instance=ExtResource( 6 )]
transform = Transform( 1.13133e-08, -1, -4.2222e-08, 0, -4.2222e-08, 1, -1, -1.13133e-08, 0, -8.66367, -74.7839, -0.930767 )
audio_streams = [ ExtResource( 13 ) ]
terminal_visible = true

[node name="ZoneSwitchArea" parent="." index="8" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.09421, 70.9006, 0.0205402 )
enable = false

[node name="CollisionShape" type="CollisionShape" parent="ZoneSwitchArea" index="0"]
shape = SubResource( 1 )

[node name="LevelStoryManager" type="Node" parent="." index="9"]
script = ExtResource( 8 )

[connection signal="all_modules_good" from="GoodModules" to="LevelStoryManager" method="_on_GoodModules_all_modules_good"]
